# gitstory

./: .env  .env.local  .gitignore  .pre-commit-config.yaml  DEV_DOC.md  README.md  coding-guidelines.md  dashboard.html  gitstory-0.0.1-py3-none-any.whl  main.py  pyproject.toml  reinstall-gitstory.ps1  reinstall-gitstory.sh  requirements.txt  tox.toml
.github/workflows/: main.yml  publish.yml  publish_pypi.yml
docs/: setup_guide.md
docs/dev/: README.md  build-guide.md  directory-structure.md  package-guide.md  run-commands-guide.md  set-up-API.md  set-up-API_dev.md  setup-guide.md  test-guide.md
docs/user/: README.md  run-commands-guide.md  set-up-API.md  set-up-API_user.md  user-guide.md
output/: dashboard.html  styles.css
reports/: 20251013.md  20251020.md  20251027.md  20251103.md  20251110.md  20251117.md  20251125.md  20251201.md
src/: main.py
src/dashboard/: html_generator.py
src/dashboard/output/: dashboard.html
src/gemini_ai/: AISummarizer.py  Config.py  __init__.py  llm_client.py  prompt_engine.py  response_handler.py  summarizer.py
src/gitstory/: __init__.py  __main__.py  cli.py  main.py
src/parser/: RepoParser.py
tests/: conftest.py  test_main.py  test_sample_other.py
tests/common_fun_tests/: test_date_time.py  test_read_key.py
tests/fixtures/: api_responses.json  sample_commits.json
tests/gemini_ai_tests/: test_llm_client.py  test_prompt_engine.py  test_response_handler.py  test_summarizer.py
tests/integration/: test_repo_parser_fallback.py  test_repo_parser_integration.py
tests/read_key_tests/: test_read_key.py
tests/test_ai/: __init__.py  test_llm_client.py  test_prompt_engine.py  test_response_handler.py
(+40 files in other folders)
