[project]
name = "gitstory"
version = "0.0.1"
description = "GitStory (IDK the Capitalization) is amazing, I think"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "gitpython>=3.1.45",
    "pytest>=8.4.2",
    "jinja2>=3.1",
    "requests>=2.31",
    "types-requests>=2.32.4.20250913",
    "markdown>=3.5",
    "python-dotenv>=1.0.1",
]
[tool.uv]
required-version = ">=0.9.0"
[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
