[project]
name = "gitstory"
version = "0.0.1"
description = "GitStory: Turning git repos into readable stories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "gitpython>=3.1.45",
    "pytest>=8.4.2",
    "jinja2>=3.1",
    "requests>=2.31",
    "types-requests>=2.32.4.20250913",
    "markdown>=3.5",
    "python-dotenv>=1.0.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "freezegun>=1.4.0",
    "pytest-timeout>=2.2.0",
]
[tool.uv]
required-version = ">=0.9.0"
[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
[project.scripts]
gitstory = "gitstory.main:cli"
